--- a/cdi-persistence-api/pom.xml
+++ b/cdi-persistence-api/pom.xml
@@ -19,12 +19,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>ch.dvbern.oss.lib.dvbern-lib-cdi-persistence</groupId>
-		<artifactId>dvbern-lib-cdi-persistence</artifactId>
+		<groupId>ch.dvbern.oss.cdipersistence</groupId>
+		<artifactId>cdi-persistence</artifactId>
 		<version>2.0.2-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>dvbern-lib-cdi-persistence-api</artifactId>
+	<artifactId>cdi-persistence-api</artifactId>
 	<packaging>jar</packaging>
 
 	<dependencies>
