--- a/cdi-persistence-test/pom.xml
+++ b/cdi-persistence-test/pom.xml
@@ -83,6 +83,17 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>${version.hibernate-validator}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.10</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
