--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,14 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<version.cdifixtures>1.0.4</version.cdifixtures>
-		<version.cditest>1.0.2</version.cditest>
-		<version.weld>1.1.3.Final</version.weld>
+		<version.cdifixtures>1.0.5-SNAPSHOT</version.cdifixtures>
+		<version.cditest>1.0.3-SNAPSHOT</version.cditest>
+		<version.weld>2.4.4.Final</version.weld>
 		<version.hibernate-jpa-2.0-api>1.0.1.Final</version.hibernate-jpa-2.0-api>
 		<version.hibernate>4.2.7.Final</version.hibernate>
 		<version.commons-dbutils>1.3</version.commons-dbutils>
 		<version.hsqldb>2.3.0</version.hsqldb>
-		<version.hibernate-validator>4.2.0.Final</version.hibernate-validator>
+		<version.hibernate-validator>6.0.2.Final</version.hibernate-validator>
 	</properties>
 
 	<dependencyManagement>
