--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<version.cdifixtures>1.0.5-SNAPSHOT</version.cdifixtures>
-		<version.cditest>1.0.3-SNAPSHOT</version.cditest>
+		<version.cdifixtures>1.0.5</version.cdifixtures>
+		<version.cditest>1.0.3</version.cditest>
 		<version.weld>2.4.4.Final</version.weld>
 		<version.hibernate-jpa-2.0-api>1.0.1.Final</version.hibernate-jpa-2.0-api>
 		<version.hibernate>4.2.7.Final</version.hibernate>
