--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,17 @@
 	<parent>
 		<groupId>ch.dvbern.oss.maven</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.3</version>
+		<version>1.0.5</version>
 	</parent>
 
 	<groupId>ch.dvbern.oss.cdipersistence</groupId>
 	<artifactId>cdi-persistence</artifactId>
 	<version>2.0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
+	<name>cdi-persistence</name>
+	<description>This library provides an abstraction of the entity manager and can be used to make instances managed and persistent</description>
+	<url>http://github.com/dvbern/cdi-persistence</url>
 
 	<properties>
 		<version.cdifixtures>1.0.5</version.cdifixtures>
@@ -53,6 +57,21 @@
 		<system>github-issues</system>
 		<url>https://github.com/dvbern/cdi-persistence/issues</url>
 	</issueManagement>
+
+	<developers>
+		<developer>
+			<name>DV Bern AG developers</name>
+			<email>hallo@dvbern.ch</email>
+			<organization>DV Bern AG</organization>
+			<organizationUrl>http://www.dvbern.ch</organizationUrl>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:git://github.com/dvbern/cdi-persistence.git</connection>
+		<developerConnection>scm:git:ssh://github.com:dvbern/cdi-persistence.git</developerConnection>
+		<url>http://github.com/dvbern/cdi-persistence/tree/master</url>
+	</scm>
 
 	<modules>
 		<module>cdi-persistence-api</module>
