--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,12 @@
 		<version.cditest>1.0.3</version.cditest>
 		<version.weld>2.4.4.Final</version.weld>
 		<version.hibernate-jpa-2.0-api>1.0.1.Final</version.hibernate-jpa-2.0-api>
-		<version.hibernate>4.2.7.Final</version.hibernate>
+		<version.hibernate>5.1.10.Final</version.hibernate>
 		<version.commons-dbutils>1.3</version.commons-dbutils>
 		<version.hsqldb>2.3.0</version.hsqldb>
-		<version.hibernate-validator>6.0.2.Final</version.hibernate-validator>
+		<version.hibernate-validator>5.3.5.Final</version.hibernate-validator>
+		<maven-compiler-plugin.source>1.7</maven-compiler-plugin.source>
+		<maven-compiler-plugin.target>1.7</maven-compiler-plugin.target>
 	</properties>
 
 	<dependencyManagement>
