--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 				<artifactId>jboss-logging</artifactId>
 				<version>3.1.3.GA</version>
 			</dependency>
+			<dependency>
+				<groupId>org.dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>2.1.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -79,5 +84,22 @@
 		<module>cdi-persistence-api</module>
 		<module>cdi-persistence-test</module>
 	</modules>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.owasp</groupId>
+					<artifactId>dependency-check-maven</artifactId>
+					<configuration>
+						<failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
+						<bundleAuditAnalyzerEnabled>false</bundleAuditAnalyzerEnabled>
+						<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+						<suppressionFile>dependency-check-suppressions.xml</suppressionFile>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 </project>
