--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>ch.dvbern.oss.maven</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.6</version>
+		<version>2.0.0</version>
 	</parent>
 
 	<groupId>ch.dvbern.oss.cdipersistence</groupId>
@@ -35,12 +35,12 @@
 	<properties>
 		<version.cdifixtures>1.0.5</version.cdifixtures>
 		<version.cditest>1.0.3</version.cditest>
-		<version.weld>2.4.4.Final</version.weld>
+		<version.weld>2.4.8.Final</version.weld>
 		<version.hibernate-jpa-2.0-api>1.0.1.Final</version.hibernate-jpa-2.0-api>
 		<version.hibernate>5.1.10.Final</version.hibernate>
 		<version.commons-dbutils>1.3</version.commons-dbutils>
 		<version.hsqldb>2.3.0</version.hsqldb>
-		<version.hibernate-validator>5.3.5.Final</version.hibernate-validator>
+		<version.hibernate-validator>6.0.13.Final</version.hibernate-validator>
 		<maven-compiler-plugin.source>1.7</maven-compiler-plugin.source>
 		<maven-compiler-plugin.target>1.7</maven-compiler-plugin.target>
 	</properties>
@@ -56,6 +56,11 @@
 				<groupId>org.dom4j</groupId>
 				<artifactId>dom4j</artifactId>
 				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mchange</groupId>
+				<artifactId>c3p0</artifactId>
+				<version>0.9.5.5</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
