prepare for maven central

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>ch.dvbern.oss.maven</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.0.0</version>
+		<version>3.0.5</version>
 	</parent>
 
 	<groupId>ch.dvbern.oss.cdipersistence</groupId>
@@ -30,7 +30,7 @@
 
 	<name>cdi-persistence</name>
 	<description>This library provides an abstraction of the entity manager and can be used to make instances managed and persistent</description>
-	<url>http://github.com/dvbern/cdi-persistence</url>
+	<url>https://github.com/dvbern/cdi-persistence</url>
 
 	<properties>
 		<version.cdifixtures>1.0.5</version.cdifixtures>
@@ -75,14 +75,14 @@
 			<name>DV Bern AG developers</name>
 			<email>hallo@dvbern.ch</email>
 			<organization>DV Bern AG</organization>
-			<organizationUrl>http://www.dvbern.ch</organizationUrl>
+			<organizationUrl>https://www.dvbern.ch</organizationUrl>
 		</developer>
 	</developers>
 
 	<scm>
 		<connection>scm:git:git://github.com/dvbern/cdi-persistence.git</connection>
 		<developerConnection>scm:git:ssh://github.com:dvbern/cdi-persistence.git</developerConnection>
-		<url>http://github.com/dvbern/cdi-persistence/tree/master</url>
+		<url>https://github.com/dvbern/cdi-persistence</url>
 	</scm>
 
 	<modules>
